[gd_scene load_steps=7 format=3 uid="uid://dofoxrdsp25en"]

[ext_resource type="Script" path="res://physics/parts/thrusters/exhausts/exhaust_01/exhaust.gd" id="1"]
[ext_resource type="ArrayMesh" path="res://physics/parts/thrusters/exhausts/exhaust_01/assets/exhaust_01/exhaust_01_InnerTube.mesh" id="2"]
[ext_resource type="ArrayMesh" path="res://physics/parts/thrusters/exhausts/exhaust_01/assets/exhaust_01/exhaust_01_ShockDiamonds.mesh" id="3"]
[ext_resource type="ArrayMesh" path="res://physics/parts/thrusters/exhausts/exhaust_01/assets/exhaust_01/exhaust_01_CarbonTraces.mesh" id="4"]
[ext_resource type="ArrayMesh" path="res://physics/parts/thrusters/exhausts/exhaust_01/assets/exhaust_01/exhaust_01_OuterLayer.mesh" id="5"]
[ext_resource type="ArrayMesh" path="res://physics/parts/thrusters/exhausts/exhaust_01/assets/exhaust_01/exhaust_01_Glow.mesh" id="6"]

[node name="Exhaust" type="Node3D"]
script = ExtResource("1")
pressure_low = 40000.0
thrust = 0.02

[node name="Glow" type="MeshInstance3D" parent="."]
mesh = ExtResource("6")

[node name="CarbonTraces" type="MeshInstance3D" parent="."]
mesh = ExtResource("4")

[node name="ShockDiamonds" type="MeshInstance3D" parent="."]
mesh = ExtResource("3")

[node name="InnerTube" type="MeshInstance3D" parent="."]
mesh = ExtResource("2")

[node name="OuterLayer" type="MeshInstance3D" parent="."]
mesh = ExtResource("5")
